Massacre/conflict missions history